--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="darkBlue">#0B8FAC</color>
     <color name="musturd">#F89603</color>
     <color name="green">#129820</color>
+    <color name="red">#F30000</color>
 
 
 </resources>
