--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MedicaApp" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MedicaApp" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/white</item>
     </style>
+
+<!--    Dark Theme-->
+    <style name="AppTheme.Dark" parent="Theme.AppCompat">
+
+</style>
+
+
 </resources>
