--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -15,6 +15,8 @@
 
 <!--    Font Family-->
 
+<!--    Bold-->
+
   <style name="bold_64">
       <item name="android:fontFamily">@font/poppins_bold</item>
       <item name="android:textSize">64sp</item>
@@ -45,11 +47,51 @@
         <item name="android:textSize">18sp</item>
     </style>
 
-<!--Authentications-->
+    <style name="bold_26">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">26sp</item>
+    </style>
+
+
+    <!--    Regular-->
+
+    <style name="regular_18">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
+
+<!--    SemiBold-->
+    <style name="semiBold_22">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">22sp</item>
+    </style>
+
+
+
+    <!--Authentications-->
     
     <style name="authText">
         <item name="android:fontFamily">@font/poppins_bold</item>
         <item name="android:textSize">26sp</item>
         <item name="android:textColor">@color/lightBlue</item>
+    </style>
+    
+    <style name="signInText">
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+    
+    <style name="authExtraText">
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/grey</item>
+    </style>
+    
+    <style name="emailText">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 </resources>
