--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -47,11 +47,32 @@
             style="@style/authExtraText"
             android:layout_marginTop="16dp"
             android:inputType="textEmailAddress"
-            android:maxLength="40"
+            android:maxLength="40"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Password"
+            android:layout_marginTop="36dp"
+            style="@style/emailText"/>
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Your Password"
+            style="@style/authExtraText"
+            android:layout_marginTop="16dp"
+            android:inputType="textPassword"
+            android:maxLength="20"/>
 
 
 
-</LinearLayout>
+
+
+
+
+    </LinearLayout>
 
 
 
