--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,12 +2,17 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="lightBlue">#7BC1B7</color>
-    <color name="grey">#D2EBE7</color>
+    <color name="gray">#858585</color>
     <color name="darkBlue">#0B8FAC</color>
     <color name="musturd">#F89603</color>
     <color name="green">#129820</color>
     <color name="red">#F30000</color>
+    <color name="primary_blue">#0B8FAC</color>
+    <color name="Secandery_blue">#7BC1B7</color>
+    <color name="light_grey">#D2EBE7</color>
+    <color name="light_blue">#8ED7F0</color>
+
+
 
 
 </resources>
