--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,65 @@
             android:layout_height="wrap_content"
             android:text="Login"
             android:layout_marginTop="16dp"
-            style="@style/"/>
+            style="@style/flatIconButton"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OR"
+            style="@style/authExtraText"
+            android:layout_gravity="center"
+            android:paddingTop="22dp"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="25dp">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logos_facebook"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="20dp"
+                style="@style/outlineButton"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/logos_google"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="20dp"
+                style="@style/outlineButton"/>
+
+
+        </LinearLayout>
+
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="25dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Don't have an account?"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="20dp"
+                style="@style/authAccountText"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Sign Up"
+                android:layout_weight="1"
+                android:layout_marginHorizontal="20dp" />
+
+
+        </LinearLayout>
 
 
 
