--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -77,6 +77,35 @@
         <item name="android:textSize">18sp</item>
     </style>
 
+    <style name="semiBold_16">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">16sp</item>
+    </style>
+
+<!--   Buttons-->
+
+    <style name="flatIconButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/buttons_flat_bg</item>
+        <item name="android:backgroundTint">@color/primary_blue</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:drawablePadding">12dp</item>
+        <item name="android:drawableTint">@color/white</item>
+    </style>
+
+    <style name="outlineButton">
+        <item name="android:textAllCaps">false</item>
+        <item name="android:background">@drawable/buttons_outline_bg</item>
+        <item name="android:textColor">@color/light_grey</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/poppins_medium</item>
+    </style>
+
+
 
     <!--Authentications-->
     
@@ -118,4 +147,11 @@
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
+    <style name="authAccountText">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/light_grey</item>
+    </style>
+
 </resources>
