--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -142,7 +142,8 @@
                 android:layout_height="wrap_content"
                 android:text="Sign Up"
                 android:layout_weight="1"
-                android:layout_marginHorizontal="20dp" />
+                android:layout_marginHorizontal="20dp"
+                style="@style/authAccountText2"/>
 
 
         </LinearLayout>
