--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -154,4 +154,11 @@
         <item name="android:textColor">@color/light_grey</item>
     </style>
 
+    <style name="authAccountText2">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primary_blue</item>
+    </style>
+
+
 </resources>
